--- a/sailfish-config/rsnapshot-user@.service
+++ b/sailfish-config/rsnapshot-user@.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=rsnapshot %I user service
+ConditionPathExists=%h/.config/rsnapshot/rsnapshot.conf configtest
 
 [Service]
 Type=simple
