Split out Sailfish config and systemd units

--- a/rpm/rsnapshot.yaml
+++ b/rpm/rsnapshot.yaml
@@ -68,13 +68,7 @@ BuildArch: noarch
 Files:
   - '%license COPYING'
   - '%{_bindir}/*'
-  - '%config %{_sysconfdir}/rsnapshot/'
   - '%config %{_sysconfdir}/rsnapshot.conf.default'
-  - '%config %{_sysconfdir}/rsnapshot.conf.sailfish_*'
-  - '%config %{_userunitdir}/rsnapshot-user@.service'
-  - '%config %{_userunitdir}/rsnapshot-user*.timer'
-  - '%config %{_userunitdir}/rsnapshot-user.target'
-
 SubPackages:
     - Name:  vim-rsnapshot
       Summary: Vim configuration for rsnapshot configuration files editing
@@ -85,3 +79,44 @@ SubPackages:
         - vim-filesystem
       Files:
         - '%{vimplugindir}/*/%{vimpluginname}.vim'
+
+    - Name:  sailfish-config
+      Summary: Sailfish configuration for %{name}
+      Group: Applications/Archiving
+      Requires:
+        - systemd
+      Description: |
+          %{summary}.
+
+          This package includes example configs and systemd units for rsnapshot.
+          To run it periodically you must:
+
+              1. Create a valid config file in ~/.config/rsnapshot/rsnapshot.conf
+              2. Enable and start the rsnapshot-user.target
+
+          See the examples/basic config at:
+
+              - %{_sysconfdir}/rsnapshot/'
+              - %{_sysconfdir}/rsnapshot.conf.sailfish_*'
+
+          %if "%{?vendor}" == "chum"
+          Title: rsnapshot services and config
+          Type: console-application
+          DeveloperName: nephros
+          Categories:
+           - System
+           - Utility
+          Custom:
+            Repo: https://github.com/sailfishos-chum/rsnapshot
+          PackageIcon: https://avatars.githubusercontent.com/u/10962189?s=200&v=4
+            Bugtracker: https://github.com/sailfishos-chum/rsnapshot/issues
+          Links:
+          %endif
+      Files:
+        - '%config %{_sysconfdir}/rsnapshot/'
+        - '%config %{_sysconfdir}/rsnapshot.conf.sailfish_*'
+        - '%config %{_userunitdir}/rsnapshot-user@.service'
+        - '%config %{_userunitdir}/rsnapshot-user*.timer'
+        - '%config %{_userunitdir}/rsnapshot-user.target'
+
+
