fixup! Service: use a target to enable all the things

--- a/sailfish-config/rsnapshot-user@.service
+++ b/sailfish-config/rsnapshot-user@.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=rsnapshot %I user service
-ConditionPathExists=%h/.config/rsnapshot/rsnapshot.conf configtest
+ConditionPathExists=%h/.config/rsnapshot/rsnapshot.conf
 
 [Service]
 Type=simple
