--- a/rpm/rsnapshot.yaml
+++ b/rpm/rsnapshot.yaml
@@ -118,5 +118,6 @@ SubPackages:
         - '%config %{_userunitdir}/rsnapshot-user@.service'
         - '%config %{_userunitdir}/rsnapshot-user*.timer'
         - '%config %{_userunitdir}/rsnapshot-user.target'
+        - '%dir %{_localstatedir}/environment/rsnapshot'
 
 
