--- a/rpm/rsnapshot.yaml
+++ b/rpm/rsnapshot.yaml
@@ -29,6 +29,7 @@ Description: |
     Categories:
      - System
      - Utility
+     - Archiving
     Custom:
       Repo: https://github.com/rsnapshot/rsnapshot
       PackagingRepo: https://github.com/sailfishos-chum/rsnapshot
@@ -98,6 +99,10 @@ SubPackages:
 
               - %{_sysconfdir}/rsnapshot/'
               - %{_sysconfdir}/rsnapshot.conf.sailfish_*'
+              - %{_localstatedir}/environment/rsnapshot/'
+
+          Contributions to these files are very welcome, please create issues
+          and PRs at the packaging repo.
 
           %if "%{?vendor}" == "chum"
           Title: rsnapshot services and config
@@ -106,6 +111,7 @@ SubPackages:
           Categories:
            - System
            - Utility
+           - Archiving
           Custom:
             Repo: https://github.com/sailfishos-chum/rsnapshot
           PackageIcon: https://avatars.githubusercontent.com/u/10962189?s=200&v=4
